--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,22 @@ li {
     display: inline;
     padding: 8px;
     font-size: 12px;
+    text-decoration: none;
+}
+span {
+  display: inline-block;
+  padding: 5px;
+}
+a {
+  color: black;
+  text-decoration: none;
+}
+li a:visited {
+  text-decoration: none;
+  color: black;
+}
+li a:hover {
+  text-decoration: underline;
 }
 .right {
     float: right;
@@ -16,10 +32,68 @@ li {
     margin-top: 10.5em;
     margin-left: 41%;
 }
-
+.search-form {
+  margin: auto;
+  width:550px;
+  border-radius:30px;
+  border:1px solid #dcdcdc;
+  height: 40px;
+}
 .search {
-    font-size: 16px;
-    margin-top: 4em;
-    margin-left: 30em;
-    width: 25%;
+  height:20px;
+  border:none;
+  width:450px;
+  font-size:16px;
+  outline: none;
+    border-radius: 30px;
+    padding: 5px 2px 5px 5px;
+    z-index: 5;
+}
+.search-form:hover {
+  box-shadow: 1px 1px 8px 1px #dcdcdc;
+}
+.mic-icon {
+  height:20px;
+  position:relative;
+  top:5px;
+  right:0px;
+}
+.search-icon {
+  height:10px;
+  position:relative;
+  top:4px;
+  left:5px;
+}
+.buttons {
+    margin-top:50px;
+    margin-left: 40%;
+}
+.button {
+    background-color: #f5f5f5;
+  border:none;
+  color:#707070;
+  font-size:15px;
+  padding: 10px 20px;
+  margin:5px;
+  border-radius:4px;
+  outline:none;
+}
+.button:hover{
+  border: 1px solid #c8c8c8;
+  padding: 9px 19px;
+  color:#808080;
+}
+footer{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #e8eaed;
+  color: white;
+  text-align: center;
+}
+.left{
+  float: left;
+  padding-left: 5px;
+  margin: 0px 15px;
 }
